fixed spacing on hero images

--- a/app/_scss/modules/_photo-list.scss
+++ b/app/_scss/modules/_photo-list.scss
@@ -1,36 +1,4 @@
-// .photos {
-//   margin: 2rem auto;
-// }
-//
-// .photo-item {
-//   margin: 2rem 0;
-//   width:100%;
-//   height: 400px;
-//   max-width: 600px;
-//   display: block;
-//   background-size: cover;
-//   background-position: center center;
-//   background-repeat: no-repeat;
-//   // background-attachment: fixed;
-//   &-info {
-//     position: relative;
-//     bottom: 0;
-//     padding: 2rem;
-//     color: #fff;
-//   }
-//   h2 {
-//     color: #fff;
-//     margin-bottom: .5rem;
-//   }
-//   p{
-//     color: #eee;
-//   }
-// }
-
-
-
 .photos-list {
-  margin: 4rem auto;
   max-width: 960px;
   width: 100%;
   padding: 0 1rem;
